<resources>
    <string name="app_name">Sawari</string>

    <string-array name="payment_array">
        <item>Cash</item>
        <item>Foree</item>
    </string-array>

    <string name="from">From ?</string>
    <string name="to">Where to ?</string>

    <string name="work_progress">Work in progress</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_rides">My Rides</string>
    <string name="menu_message">Notification</string>
    <string name="menu_communicate">Communicate</string>
    <string name="tv_buses">tv_buses</string>
    <string name="menu_logout">Log out</string>
    <string name="location_permission_denied">\"\"</string>
    <string name="permission_required_toast">\"\"</string>
    <string name="permission_rationale_location">We need to access your location, else you cannot move forward</string>
    <string name="open_location_settings">\"\"</string>
    <string name="gps_network_not_enabled">\"\"</string>
    <string name="Cancel">Cancel</string>
    <string name="SelectPaymentType">Select Payment Type</string>
    <string name="BusActivityRides">We do not have any routes running for your selected time and day. Please select another day to see available routes.</string>
    <string name="BusActivityRidesClassic">If you don\'t see a suitable route, you can also use our Classic Search from the main menu.</string>

    <string name="book_id">Booking ID:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2">2</string>
    <string name="mar_23_2020">Mar 23, 2020</string>
    <string name="about">About Us</string>
    <string name="setting">Setting</string>
    <string name="help_nav">Help</string>
    <string name="GOOGLE_MAP_API_KEY">AIzaSyCLoj4D3yXrJXoDVoEauuN7wFaB72EJREI</string>
    <string name="add_place">Add Place</string>
    <string name="set_location_on_map">Set location on map</string>
    <string name="sawari">SAWARI</string>
    <string name="update_home_work_locations"><![CDATA[Update Home & Work Location]]></string>
    <string name="skip">SKIP</string>
    <string name="update">UPDATE</string>
    <string name="rate">Rated 4.5</string>
    <string name="phone_number">3442713545</string>
    <string name="login_message">Nice to see you again, Login to continue</string>
    <string name="minus_sign">-</string>
    <string name="pin">Create a secure pin</string>
    <string name="forgot_message">We are here for you! Lets get back to your account.</string>

    <string-array name="help_array">
        <item>Complaints and Refunds</item>
        <item>Pilot Behavior</item>
        <item>Payment or Wallet Issues</item>
        <item>Lost and Found</item>
    </string-array>

</resources>

