<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.UpdateHomeAndWorkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_home_work_locations"
            android:layout_marginTop="10dp"
            android:textSize="26sp"
            android:layout_gravity="center_vertical"
            android:typeface="serif"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/home"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:layout_gravity="center_horizontal|center_vertical"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="15">

                <TextView
                    android:id="@+id/update_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Home"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    android:typeface="monospace" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tap to Select Location from map"
                    android:textAlignment="textStart"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:typeface="serif"
                    android:fontFamily="sans-serif-medium" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/work"
                android:layout_marginEnd="20dp"
                android:layout_weight="2"
                android:layout_gravity="center_horizontal|center_vertical"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="15">

                <TextView
                    android:id="@+id/update_work"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Work"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="16sp"
                    android:typeface="monospace" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tap to Select Location from map"
                    android:textAlignment="textStart"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:typeface="serif"
                    android:fontFamily="sans-serif-medium" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_background"
        android:text="@string/update"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:text="@string/skip"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorWhite"
        android:textSize="14sp" />

</RelativeLayout>